--- a/src/adult.html
+++ b/src/adult.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 
-<h1>ACKNOWLEDGEMENT, RELEASE AND WAIVER FORM (ADULT)</h1>
+<h2>ACKNOWLEDGEMENT, RELEASE AND WAIVER FORM (ADULT)</h2>
 
+<input type="hidden" id="waiver_type" name="waiver_type" value="adult" />
 <dl>
 <dt>Name of Event:</dt><dd>AKYSB 2016 Gold Cup Tournament (the Event)</dd>
 <dt>Date(s) of Event:</dt><dd>May 15th 2016, May 21st 2016, May 22nd 2016</dd>
@@ -57,9 +58,61 @@
 	<option value="QC">Quebec</option>
 	<option value="SK">Saskatchewan</option>
 	<option value="YT">Yukon</option>
+
+	<option value="AL">Alabama</option>
+	<option value="AK">Alaska</option>
+	<option value="AZ">Arizona</option>
+	<option value="AR">Arkansas</option>
+	<option value="CA">California</option>
+	<option value="CO">Colorado</option>
+	<option value="CT">Connecticut</option>
+	<option value="DE">Delaware</option>
+	<option value="DC">District Of Columbia</option>
+	<option value="FL">Florida</option>
+	<option value="GA">Georgia</option>
+	<option value="HI">Hawaii</option>
+	<option value="ID">Idaho</option>
+	<option value="IL">Illinois</option>
+	<option value="IN">Indiana</option>
+	<option value="IA">Iowa</option>
+	<option value="KS">Kansas</option>
+	<option value="KY">Kentucky</option>
+	<option value="LA">Louisiana</option>
+	<option value="ME">Maine</option>
+	<option value="MD">Maryland</option>
+	<option value="MA">Massachusetts</option>
+	<option value="MI">Michigan</option>
+	<option value="MN">Minnesota</option>
+	<option value="MS">Mississippi</option>
+	<option value="MO">Missouri</option>
+	<option value="MT">Montana</option>
+	<option value="NE">Nebraska</option>
+	<option value="NV">Nevada</option>
+	<option value="NH">New Hampshire</option>
+	<option value="NJ">New Jersey</option>
+	<option value="NM">New Mexico</option>
+	<option value="NY">New York</option>
+	<option value="NC">North Carolina</option>
+	<option value="ND">North Dakota</option>
+	<option value="OH">Ohio</option>
+	<option value="OK">Oklahoma</option>
+	<option value="OR">Oregon</option>
+	<option value="PA">Pennsylvania</option>
+	<option value="RI">Rhode Island</option>
+	<option value="SC">South Carolina</option>
+	<option value="SD">South Dakota</option>
+	<option value="TN">Tennessee</option>
+	<option value="TX">Texas</option>
+	<option value="UT">Utah</option>
+	<option value="VT">Vermont</option>
+	<option value="VA">Virginia</option>
+	<option value="WA">Washington</option>
+	<option value="WV">West Virginia</option>
+	<option value="WI">Wisconsin</option>
+	<option value="WY">Wyoming</option>
 </select> </label>
 
-<label>Participant Name: <input name="printed_name" id="printed_name" type="text" /></label>
+<label>Participant Name: <input name="printed_name" id="printed_name" type="text" disabled/></label>
 
 <label>Participant Signature:</label>
 <em>Please use your mouse to create something that looks like your signature in the rectangle below.</em>
