--- a/src/adult.html
+++ b/src/adult.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-endpoint="http://demosrv.gold-cup.ca">
     <meta charset="UTF-8">
     <title>Gold Cup Waiver - Adult</title>
 </head>
@@ -13,6 +13,9 @@
 <dt>Date(s) of Event:</dt><dd>May 15th 2016, May 21st 2016, May 22nd 2016</dd>
 <dt>Primary location(s) of Event:</dt><dd>Brampton Soccer Centre, Hangar Sports and Events Centre, Ontario Soccer Centre</dd>
 
+<div id="waiver_notes"></div>
+
+<div id="waiver_form">
 <div>In  consideration  of  the  opportunity  to  participate  in  the  Event,  I,  <input name="participant" id="participant" type="text" /> (please enter name),  for  myself  and  my  heirs, personal representatives, estate, insurers and assigns, hereby irrevocably and unconditionally:</div>
 
 <ol>
@@ -120,6 +123,8 @@
 
     <button class="button button-outline" id="accept" disabled>Accept</button>
     <button class="button button-clear" id="clear">Clear</button>
+</div>
+
     <script src="bundle.js"></script>
 </body>
 </html>
