styling; rename prov to province

--- a/src/adult.html
+++ b/src/adult.html
@@ -47,7 +47,7 @@
 <p>I  HAVE READ THIS ACKNOWLEDGEMENT, RELEASE AND WAIVER FORM CAREFULLY.  I  FULLY UNDERSTAND ITS CONTENT, AND VOLUNTARILY AGREE TO ITS TERMS.  BY SIGNING THIS ACKNOWLEDGEMENT, RELEASE AND WAIVER, I UNDERSTAND THAT I AM WAIVING CERTAIN LEGAL RIGHTS, INCLUDING THE RIGHT TO SUE.</p>
 
 <label>City: <input name="city" id="city" type="text" /> </label>
-<label>Province: <select name="prov" id="prov">
+<label>Province: <select name="province" id="province">
 	<option value="AB">Alberta</option>
 	<option value="BC">British Columbia</option>
 	<option value="MB">Manitoba</option>
