--- a/src/minor.html
+++ b/src/minor.html
@@ -49,7 +49,7 @@ permit  the  Released  Parties  and  event  personnel  to  administer  first  ai
 <p>I  HAVE READ  THIS  ACKNOWLEDGEMENT,  RELEASE  AND  WAIVER  FORM  CAREFULLY.  I  FULLY UNDERSTAND ITS CONTENT, AND VOLUNTARILY AGREE TO ITS TERMS.  BY  SIGNING  THIS ACKNOWLEDGEMENT,  RELEASE  AND  WAIVER, I  UNDERSTAND  THAT I,  ON BEHALF  OF  MYSELF AND THE PARTICIPANT, AM WAIVING CERTAIN LEGAL RIGHTS, INCLUDING THE RIGHT TO SUE.</p>
 
 <label>City: <input name="city" id="city" type="text" /> </label>
-<label>Province: <select name="prov" id="prov">
+<label>Province: <select name="province" id="province">
 	<option value="AB">Alberta</option>
 	<option value="BC">British Columbia</option>
 	<option value="MB">Manitoba</option>
